--- a/Hello_World_Rede_Neural.ipynb
+++ b/Hello_World_Rede_Neural.ipynb
@@ -7,10 +7,11 @@
       "provenance": [],
       "collapsed_sections": [
         "igT-lJL-UzDS",
-        "eIvYY-vyVBwT"
+        "eIvYY-vyVBwT",
+        "wqPjFqobYDcH"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA7okc53R1jvdS1zMhmVvF",
+      "authorship_tag": "ABX9TyNh8NPa+0u+xoF5BKbs1duD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1385,7 +1386,7 @@
       "source": [
         "Não deu o resultado 31 exato, mas por que?\n",
         "\n",
-        "Lembre-se de que as redes neurais lidam com probabilidades, portanto, dados os dados com os quais alimentamos o nosso modelo, ele calculou que há uma probabilidade muito alta de que a relação entre X e Y seja Y = 3X + 1, mas com apenas 6 pontos de dados no treinamento podemos não saber com certeza. Como resultado, o resultado para 10 é muito próximo de 31, mas não necessariamente 31."
+        "Lembre-se de que as redes neurais lidam com probabilidades, portanto, conforme os dados com os quais alimentamos o nosso modelo, ele calculou que há uma probabilidade muito alta de que a relação entre X e Y seja Y = 3X + 1, mas com apenas 6 pontos de dados no treinamento podemos não saber com certeza. Como resultado, o resultado para 10 é muito próximo de 31, mas não necessariamente 31."
       ]
     }
   ]
